--- a/index.html
+++ b/index.html
@@ -2,29 +2,34 @@
 <html lang="zh">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <meta name="theme-color" content="#ff8ba7"/>
+    <link rel="apple-touch-icon" sizes="192x192" href="./icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./icons/icon-96x96.png">
+    <link rel="icon" href="./icons/icon-128x128.png">
+
     <title>Petpet</title>
 </head>
 
 <body>
-    <h1>Petpet</h1>
-    <div id="app"></div>
-    <script type="module" src="src/main.js"></script>
-    <div class="links">
-        <a href="https://github.com/Dituon/petpet-js">❤Github❤</a>
-        <a
-            href="tencent://groupwpa/?subcmd=all&param=7b2267726f757055696e223a3832383335303237372c2274696d655374616d70223a313638383436373133362c22617574684b6579223a223364616e5335746646676c514b334c5a74476a7a58773454434a726f546e594a6c6a34435676572f4c4f6b6c324f423937683877464c6256443978766e796741222c2261757468223a22227d">🐧交流群🐧</a>
-    </div>
-    <script>
-        var _hmt = _hmt || [];
-        (function () {
-            var hm = document.createElement("script");
-            hm.src = "https://hm.baidu.com/hm.js?f20f227353380b0bad9c8a49860b6cd5";
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
+<h1>Petpet</h1>
+<div id="app"></div>
+<script type="module" src="src/main.js"></script>
+<div class="links">
+    <a href="https://github.com/Dituon/petpet-js">❤Github❤</a>
+    <a href="tencent://groupwpa/?subcmd=all&param=7b2267726f757055696e223a3832383335303237372c2274696d655374616d70223a313638383436373133362c22617574684b6579223a223364616e5335746646676c514b334c5a74476a7a58773454434a726f546e594a6c6a34435676572f4c4f6b6c324f423937683877464c6256443978766e796741222c2261757468223a22227d">🐧交流群🐧</a>
+</div>
+<script>
+    var _hmt = _hmt || [];
+    (function () {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?f20f227353380b0bad9c8a49860b6cd5";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 </body>
 
 </html>
