--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script type="module" src="src/main.js"></script>
 <div class="links">
     <a href="https://github.com/Dituon/petpet-js">❤Github❤</a>
-    <a href="tencent://groupwpa/?subcmd=all&param=7b2267726f757055696e223a3832383335303237372c2274696d655374616d70223a313638383436373133362c22617574684b6579223a223364616e5335746646676c514b334c5a74476a7a58773454434a726f546e594a6c6a34435676572f4c4f6b6c324f423937683877464c6256443978766e796741222c2261757468223a22227d">🐧交流群🐧</a>
+    <a href="https://jq.qq.com/?_wv=1027&k=E2uTe8ga">🐧交流群🐧</a>
 </div>
 <script>
     var _hmt = _hmt || [];
