--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 <div id="app"></div>
 <script type="module" src="src/main.js"></script>
 <div class="links">
+    <a onclick="window.showReadme()">💡使用教程💡</a>
     <a href="https://github.com/Dituon/petpet-js">❤Github❤</a>
     <a href="https://jq.qq.com/?_wv=1027&k=E2uTe8ga">🐧交流群🐧</a>
 </div>
+
 <script>
     var _hmt = _hmt || [];
     (function () {
