--- a/readme.html
+++ b/readme.html
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <meta name="theme-color" content="#ff8ba7"/>
+    <link rel="apple-touch-icon" sizes="192x192" href="./assets/icon-192x192-b77abe40.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/icon-96x96-084473ea.png">
+    <link rel="icon" href="./assets/icon-128x128-7ad5d31d.png">
 
+    
     <style>
         .readme {
             display: flex;
             flex-direction: column;
             align-items: center;
             text-align: center;
+            background: var(--sub-bg);
         }
 
         .readme > div, details {
-            background-color: var(--sub-bg);
+            background-color: var(--bg);
             width: min(26em, 80vw);
             margin-top: 2em;
             border-radius: 16px;
@@ -35,32 +40,36 @@
             display:table;
             width: 100%;
             border-radius: 0 0 16px 16px;
-            border-top: var(--bg) 2px dashed;
+            border-top: var(--sub-bg) 2px dashed;
         }
     </style>
     <title>readme</title>
-</head>
+  <script type="module" crossorigin src="./assets/readme-e506e057.js"></script>
+  <link rel="modulepreload" crossorigin href="./assets/app-d2e00ec3.js">
+  <link rel="stylesheet" href="./assets/readme-c6b26520.css">
+<link rel="manifest" href="./manifest.webmanifest"><script id="vite-plugin-pwa:inline-sw">if('serviceWorker' in navigator) {window.addEventListener('load', () => {navigator.serviceWorker.register('./sw.js', { scope: './' })})}</script></head>
 <body class="readme">
 <div>
     <h2>选择模板</h2>
-    <video src="./video/select-template.mp4" autoplay muted loop></video>
+    <video src="./assets/select-template-56b49c1f.mp4" autoplay muted loop></video>
 </div>
 <div>
     <h2>上传头像</h2>
     <p>拖拽或选择上传</p>
-    <video src="./video/upload-avatar.mp4" autoplay muted loop></video>
+    <video src="./assets/upload-avatar-381ae173.mp4" autoplay muted loop></video>
 </div>
 <div>
     <h2>查看预览</h2>
     <p>调整图片速度</p>
-    <video src="./video/result-preview.mp4" autoplay muted loop></video>
+    <video src="./assets/result-preview-79577a4b.mp4" autoplay muted loop></video>
 </div>
 <details>
     <summary>进阶操作</summary>
     <h3>调整模板排列方式</h3>
-    <video src="./video/change-template-size.mp4" autoplay muted loop></video>
+    <video src="./assets/change-template-size-59801ef5.mp4" autoplay muted loop></video>
     <h3>调整头像尺寸</h3>
-    <video src="./video/edit-avatar.mp4" autoplay muted loop></video>
+    <video src="./assets/edit-avatar-a271232d.mp4" autoplay muted loop></video>
 </details>
+
 </body>
 </html>
