Update: App: add editor link

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <script type="module" src="src/main.js"></script>
 <div class="links">
     <a onclick="window['showReadme']()">💡使用教程💡</a>
+    <a href="editor/index.html" target="_blank">🔮模板编辑器🔮</a>
     <a href="https://github.com/Dituon/petpet-js">❤Github❤</a>
-    <a href="https://jq.qq.com/?_wv=1027&k=E2uTe8ga">🐧交流群🐧</a>
+    <a href="https://jq.qq.com/?_wv=1027&k=E2uTe8ga" target="_blank">🐧交流群🐧</a>
 </div>
 
 <script>
