--- a/editor/index.html
+++ b/editor/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+
+    <meta name="theme-color" content="#ff8ba7"/>
+    <link rel="apple-touch-icon" sizes="192x192" href="../icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../icons/icon-96x96.png">
+    <link rel="icon" href="../icons/icon-128x128.png">
+
+    <title>Petpet Editor</title>
 </head>
 <body>
 <h1>Petpet Editor</h1>
