--- a/editor/index.html
+++ b/editor/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+
+    <meta name="theme-color" content="#ff8ba7"/>
+    <link rel="apple-touch-icon" sizes="192x192" href="../assets/icon-192x192-b77abe40.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="../assets/icon-96x96-084473ea.png">
+    <link rel="icon" href="../assets/icon-128x128-7ad5d31d.png">
+
+    <title>Petpet Editor</title>
   <script type="module" crossorigin src="../assets/editor-0fce1c81.js"></script>
   <link rel="modulepreload" crossorigin href="../assets/app-0a200f2a.js">
   <link rel="modulepreload" crossorigin href="../assets/setting-5842fc7b.js">
