deploy: 95fba9d272fa4ec57c28b23332fbd9c054bb59af

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a onclick="window['showReadme']()">💡使用教程💡</a>
     <a href="editor/index.html" target="_blank">🔮模板编辑器🔮</a>
     <a href="https://github.com/Dituon/petpet-js">❤Github❤</a>
-    <a href="https://qm.qq.com/q/uOvus62ERW" target="_blank">🐧交流群🐧</a>
+    <a href="https://qm.qq.com/q/hlHuSF7ehO" target="_blank">🐧交流群🐧</a>
 </div>
 
 <script>
